<resources>
    <string name="app_name">오늘의 날씨</string>

    <string name="fine_particle">미세먼지</string>
    <string name="ultra_fine_particle">초미세먼지</string>
    <string name="good">좋음</string>
    <string name="normal">보통</string>
    <string name="bad">나쁨</string>
    <string name="very_bad">아주 나쁨</string>

    <string name="hourly_weather">시간대별 날씨</string>
    <string name="weekly_weather">주간 날씨</string>
    <string name="air_pollution">대기 오염</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="guide_message">어느 곳을 찾으세요?</string>
    <string name="grade_info_guide">등급 기준 안내</string>
    <string name="grade_info_message">미세먼지와 초미세먼지 농도별 수치는\n환경부를 기준으로 총 네가지 등급으로 구분됩니다.</string>
    <string name="weather_details">상세 날씨</string>
    <string name="pop">강수확률</string>
    <string name="wind">바람</string>
    <string name="humidity">습도</string>
    <string name="uvrays">자외선지수</string>
    <string name="sunrise_sunset">일출·일몰</string>
    <string name="before_noon">오전</string>
    <string name="afternoon">오후</string>
    <string name="today">오늘</string>
    <string name="now">지금</string>
    <string name="midnight">24시</string>
    <string name="tomorrow">내일</string>
    <string name="day_after_tomorrow">모레</string>
    <string name="todays">오늘의</string>
    <string name="weather">날씨</string>
    <string name="weather_status">날씨 상태</string>
    <string name="weather_icons_info_description">오늘의 날씨에서 제공하는 날씨 상태별 아이콘입니다.</string>
    <string name="grade_good">좋음</string>
    <string name="grade_normal">보통</string>
    <string name="grade_bad">나쁨</string>
    <string name="grade_very_bad">매우 나쁨</string>
    <string name="not_night">낮</string>
    <string name="night">밤</string>
    <string name="loading_text">데이터 로딩중...</string>
    <string name="no_search_result">검색 결과가 없습니다.</string>
    <string name="edit">편집</string>
    <string name="done">완료</string>
    <string name="delete">삭제</string>
    <string name="cancel">취소</string>
    <string name="add">추가</string>
    <string name="location_service">위치 서비스</string>
    <string name="location_service_description">활성화하면 현재위치의\n날씨와 미세먼지 정보가 표시됩니다.</string>
    <string name="data_source_name">날씨 정보 제공 : 기상청 | 대기 정보 제공 : AirKorea</string>
    <string name="data_source_notice">측정소 현지 사정이나 데이터 수신상태에 따라\n실제 날씨 및 대기농도 수치와 일부 다를 수 있습니다.</string>
    <string name="ultra_fine_particle_criteria_good">~15㎍/㎥</string>
    <string name="ultra_fine_particle_criteria_normal">~35㎍/㎥</string>
    <string name="ultra_fine_particle_criteria_bad">~75㎍/㎥</string>
    <string name="ultra_fine_particle_criteria_very_bad">76㎍/㎥~</string>
    <string name="fine_particle_criteria_good">~30㎍/㎥</string>
    <string name="fine_particle_criteria_normal">~80㎍/㎥</string>
    <string name="fine_particle_criteria_bad">~150㎍/㎥</string>
    <string name="fine_particle_criteria_very_bad">151㎍/㎥~</string>
    <string name="onboarding_description1">귀여운 가족이 생생하게 전달하는\n오늘의 날씨를 만나보세요.</string>
    <string name="onboarding_description2">오늘의 일몰 시간에 맞춰 다크 모드로\n변환되어 더 생생하게 확인할 수 있어요.</string>
    <string name="onboarding_description3">기본적인 데이터 뿐만 아니라\n상세 날씨와 일출, 일몰 시간까지 전달해드립니다.</string>
    <string name="onboarding_title1">우리 가족을 소개합니다</string>
    <string name="onboarding_title2">다크 모드로 확인해요!</string>
    <string name="onboarding_title3">정확한 날씨, 대기 정보를 한눈에!</string>
    <string name="next">다음</string>
    <string name="skip">건너뛰기</string>
    <string name="start">시작하기</string>
    <string name="unit_snow">(cm)</string>
    <string name="unit_rain">(mm)</string>
    <string name="fine_particle_short">미세</string>
    <string name="style">스타일</string>
    <string name="light_mode">라이트 모드</string>
    <string name="dark_mode">다크 모드</string>
    <string name="transparency">투명도</string>
    <string name="save">저장</string>
    <string name="widget_configure">위젯 설정</string>
    <string name="select_location">지역 선택</string>
</resources>