<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_layout"
    android:background="@color/bottom_sheet_dim_color"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1"
        tools:layout_constraintGuide_percent="0"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="2"
        tools:layout_constraintGuide_percent="1"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_root_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_guideline"
        app:layout_constraintBottom_toTopOf="@id/bottom_guideline">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_bottom_sheet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/grade_info_guide_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/spoqa_han_sans_neo_bold"
                android:text="@string/grade_info_guide"
                android:textColor="@color/text_primary_color"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/close_button"/>

            <ImageView
                android:id="@+id/close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="24dp"
                app:tint="@color/close_button_tint_color"
                app:srcCompat="@drawable/icon_close"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/grade_info_message_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/grade_info_message"
                android:textColor="@color/grade_info_message_text_color"
                android:lineSpacingExtra="4sp"
                app:layout_constraintStart_toStartOf="@id/grade_info_guide_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/grade_info_guide_text_view"/>

            <TextView
                android:id="@+id/fine_particle_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/fine_particle"
                android:textColor="@color/text_primary_color"
                app:layout_constraintStart_toStartOf="@id/grade_info_message_text_view"
                app:layout_constraintTop_toBottomOf="@id/grade_info_message_text_view"/>

            <LinearLayout
                android:id="@+id/fine_particle_grades"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/fine_particle_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/grade_good"
                    android:textColor="@color/grade_good"
                    android:textSize="12sp"
                    android:gravity="start"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/grade_normal"
                    android:textColor="@color/grade_normal"
                    android:textSize="12sp"
                    android:gravity="start"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/grade_bad"
                    android:textColor="@color/grade_bad"
                    android:textSize="12sp"
                    android:gravity="start"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/grade_very_bad"
                    android:textColor="@color/grade_very_bad"
                    android:textSize="12sp"
                    android:gravity="start"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fine_particle_grade_criterias"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fine_particle_grade_colors">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fine_particle_criteria_good"
                    android:textColor="@color/air_pollution_interval_text_color"
                    android:textSize="10sp"
                    android:gravity="end"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fine_particle_criteria_normal"
                    android:textColor="@color/air_pollution_interval_text_color"
                    android:textSize="10sp"
                    android:gravity="end"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fine_particle_criteria_bad"
                    android:textColor="@color/air_pollution_interval_text_color"
                    android:textSize="10sp"
                    android:gravity="end"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fine_particle_criteria_very_bad"
                    android:textColor="@color/air_pollution_interval_text_color"
                    android:textSize="10sp"
                    android:gravity="end"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fine_particle_grade_colors"
                android:layout_width="0dp"
                android:layout_height="4dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/fine_particle_grades"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/background_grade_good"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="2dp"
                    android:background="@color/grade_normal"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="2dp"
                    android:background="@color/grade_bad"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="2dp"
                    android:background="@drawable/background_grade_very_bad"/>
            </LinearLayout>

            <TextView
                android:id="@+id/ultra_fine_particle_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/ultra_fine_particle"
                android:textColor="@color/text_primary_color"
                app:layout_constraintStart_toStartOf="@id/fine_particle_text_view"
                app:layout_constraintTop_toBottomOf="@id/fine_particle_grade_criterias"/>

            <LinearLayout
                android:id="@+id/ultra_fine_particle_grade_criterias"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="84dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ultra_fine_particle_grade_colors"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ultra_fine_particle_criteria_good"
                    android:textColor="@color/air_pollution_interval_text_color"
                    android:textSize="10sp"
                    android:gravity="end"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ultra_fine_particle_criteria_normal"
                    android:textColor="@color/air_pollution_interval_text_color"
                    android:textSize="10sp"
                    android:gravity="end"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ultra_fine_particle_criteria_bad"
                    android:textColor="@color/air_pollution_interval_text_color"
                    android:textSize="10sp"
                    android:gravity="end"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ultra_fine_particle_criteria_very_bad"
                    android:textColor="@color/air_pollution_interval_text_color"
                    android:textSize="10sp"
                    android:gravity="end"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ultra_fine_particle_grade_colors"
                android:layout_width="0dp"
                android:layout_height="4dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/ultra_fine_particle_grades"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/background_grade_good"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="2dp"
                    android:background="@color/grade_normal"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="2dp"
                    android:background="@color/grade_bad"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="2dp"
                    android:background="@drawable/background_grade_very_bad"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ultra_fine_particle_grades"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ultra_fine_particle_text_view">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/grade_good"
                    android:textColor="@color/grade_good"
                    android:textSize="12sp"
                    android:gravity="start"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/grade_normal"
                    android:textColor="@color/grade_normal"
                    android:textSize="12sp"
                    android:gravity="start"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/grade_bad"
                    android:textColor="@color/grade_bad"
                    android:textSize="12sp"
                    android:gravity="start"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/grade_very_bad"
                    android:textColor="@color/grade_very_bad"
                    android:textSize="12sp"
                    android:gravity="start"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>